<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclcpp_lua</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>Apache License 2.0</license>

  <author email="lars.tingelstad@ntnu.no">Lars Tingelstad</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>sol2</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>class_loader</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>controller_parameter_server</depend>
  <depend>kuka_rsi_hw_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
